Complete Implementation of API 7.0.1
* this release will break code on user-side
* better exception handling
* new version scheme
* new README file